--- a/suryeok.html
+++ b/suryeok.html
@@ -14,17 +14,10 @@
             transition: background-color 0.3s ease;
             background-color: transparent;
         }
-        body.dark-mode {
-            background-color: #111;
-            color: #eee;
-        }
         h1 {
             margin-bottom: 20px;
             color: #333;
             transition: color 0.3s ease;
-        }
-        h1.dark-mode {
-            color: #fff;
         }
         .book-section {
             text-align: center;
@@ -34,17 +27,10 @@
             background-color: transparent;
             transition: background-color 0.3s ease;
         }
-        .book-section.dark-mode {
-            background-color: #333;
-            color: #eee;
-        }
         .book-section h2 {
             color: #333;
             transition: color 0.3s ease;
             margin-bottom: 20px;
-        }
-        .book-section h2.dark-mode {
-            color: #fff;
         }
         .book-info {
             display: flex;
@@ -69,9 +55,6 @@
             color: #333;
             transition: color 0.3s ease;
         }
-        .book-title.dark-mode {
-            color: #fff;
-        }
         .book-description {
             font-size: 0.9em;
             color: #666;
@@ -79,9 +62,6 @@
             text-align: left;
             margin-bottom: 20px;
             line-height: 1.6;
-        }
-        .book-description.dark-mode {
-            color: #ddd;
         }
         .button-container {
             display: flex;
@@ -113,24 +93,6 @@
             box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
             transform: translateY(-2px);
         }
-        .dark-mode .view-button {
-            background-color: #000;
-            color: #fff;
-        }
-        .dark-mode .view-button:hover {
-            background-color: #333;
-            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-            transform: translateY(-2px);
-        }
-        .dark-mode .download-button {
-            background-color: #000;
-            color: #fff;
-        }
-        .dark-mode .download-button:hover {
-            background-color: #333;
-            box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
-            transform: translateY(-2px);
-        }
         .go-back-button {
             position: fixed;
             top: 20px;
@@ -149,12 +111,6 @@
         }
         .go-back-button:hover {
              color: #333;
-        }
-        .dark-mode .go-back-button {
-            color: #fff;
-        }
-        .dark-mode .go-back-button:hover {
-            color: #ddd;
         }
         .go-back-button span {
             margin-right: 5px;
@@ -176,45 +132,18 @@
             }
         }
     </style>
-    <script>
-       
-
-            if (localStorage.getItem('darkMode') === 'true') {
-                body.classList.add('dark-mode');
-                bookSection.classList.add('dark-mode');
-                bookTitle.classList.add('dark-mode');
-                bookDescription.classList.add('dark-mode');
-            }
-
-            viewButton.addEventListener('click', () => {
-                window.open('https://drive.google.com/file/d/1D0ZTKnLGpq0-f_LynMdXHz93g9ohEQMu/view?usp=sharing', '_blank');
-            });
-
-            downloadButton.addEventListener('click', () => {
-                // 다운로드 링크를 직접 지정합니다.
-                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1D0ZTKnLGpq0-f_LynMdXHz93g9ohEQMu&export=download';
-                // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
-                window.location.href = downloadUrl;
-            });
-
-            goBackButton.addEventListener('click', () => {
-                window.history.back();
-            });
-        });
-    </script>
 </head>
 <body>
     <a href="index.html" class="go-back-button">
         <span>←</span>
     </a>
     <div class="book-section">
-        <h2 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''}">책 소개</h2>
+        <h2>책 소개</h2>
         <div class="book-info">
             <img src="https://i.postimg.cc/QxKsntk5/22.jpg" alt="수력충전 중학 수학 1-1" class="book-cover">
-            <h3 class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-title">수력충전 중학 수학 1-1</h3>
-            <p class="${document.body.classList.contains('dark-mode') ? 'dark-mode' : ''} book-description">
+            <h3 class="book-title">수력충전 중학 수학 1-1</h3>
+            <p class="book-description">
                 쉬운 개념 이해와 정확한 연산력을 기르는 수력충전!
-
             </p>
         </div>
         <div class="button-container">
@@ -222,5 +151,24 @@
             <button class="download-button">다운로드</button>
         </div>
     </div>
+
+    <script>
+        const viewButton = document.querySelector('.view-button');
+        const downloadButton = document.querySelector('.download-button');
+        const goBackButton = document.querySelector('.go-back-button');
+
+        viewButton.addEventListener('click', () => {
+            window.open('https://drive.google.com/file/d/1D0ZTKnLGpq0-f_LynMdXHz93g9ohEQMu/view?usp=sharing', '_blank');
+        });
+
+        downloadButton.addEventListener('click', () => {
+            const downloadUrl = 'https://drive.usercontent.google.com/uc?id=1D0ZTKnLGpq0-f_LynMdXHz93g9ohEQMu&export=download';
+            window.location.href = downloadUrl;
+        });
+
+        goBackButton.addEventListener('click', () => {
+            window.history.back();
+        });
+    </script>
 </body>
 </html>
