--- a/uhyeong.html
+++ b/uhyeong.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>개념+유형 기초탄탄 라이트 중학 수학 1-1 답지</title>
+    <title>개념유형 중학 수학 1-1 답지</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -126,6 +126,28 @@
             }
         }
     </style>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const viewButton = document.querySelector('.view-button');
+            const downloadButton = document.querySelector('.download-button');
+            const goBackButton = document.querySelector('.go-back-button');
+
+            viewButton.addEventListener('click', () => {
+                window.open('https://drive.google.com/file/d/17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-/view?usp=sharing', '_blank');
+            });
+
+            downloadButton.addEventListener('click', () => {
+                // 다운로드 링크를 직접 지정합니다.
+                const downloadUrl = 'https://drive.usercontent.google.com/uc?id=17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-&export=download';
+                // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
+                window.location.href = downloadUrl;
+            });
+
+            goBackButton.addEventListener('click', () => {
+                window.history.back();
+            });
+        });
+    </script>
 </head>
 <body>
     <a href="index.html" class="go-back-button">
@@ -134,10 +156,10 @@
     <div class="book-section">
         <h2>책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/NMnpksGc/image.jpg" alt="개념+유형 라이트 중등 수학 1-1" class="book-cover">
-            <h3 class="book-title">개념+유형 중학 수학 1-1</h3>
+            <img src="https://i.postimg.cc/8P8wVdNc/image.png" alt="개념유형 중학 수학 1-1" class="book-cover">
+            <h3 class="book-title">개념유형 중학 수학 1-1</h3>
             <p class="book-description">
-                학교 수학 개념과 유형을 완벽하게 학습할 수 있도록 구성된 수준별 맞춤 학습서!
+                중등 수학의 핵심 개념을 유형별로 정리!
             </p>
         </div>
         <div class="button-container">
