--- a/wonri.html
+++ b/wonri.html
@@ -132,17 +132,18 @@
             const downloadButton = document.querySelector('.download-button');
             const goBackButton = document.querySelector('.go-back-button');
 
+            // 웹에서 보기 버튼 클릭 시
             viewButton.addEventListener('click', () => {
                 window.open('https://drive.google.com/file/d/17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-/view?usp=sharing', '_blank');
             });
 
+            // 다운로드 버튼 클릭 시
             downloadButton.addEventListener('click', () => {
-                // 다운로드 링크를 직접 지정합니다.
                 const downloadUrl = 'https://drive.usercontent.google.com/uc?id=17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-&export=download';
-                // 현재 창에서 다운로드 링크로 이동하여 다운로드를 시작합니다.
                 window.location.href = downloadUrl;
             });
 
+            // 뒤로가기 버튼 클릭 시
             goBackButton.addEventListener('click', () => {
                 window.history.back();
             });
