--- a/uhyeong.html
+++ b/uhyeong.html
@@ -144,7 +144,9 @@
         <div class="button-container">
             <!-- 답지 링크 수정 -->
             <button class="view-button" onclick="window.open('https://drive.google.com/file/d/17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-/view?usp=sharing', '_blank')">웹에서 보기</button>
-            <button class="download-button" onclick="window.location.href='https://drive.usercontent.google.com/uc?id=17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-&export=download'">다운로드</button>
+            <button class="download-button" onclick="window.location.href='https://drive.usercontent.google.com/uc?id=17ViV4pbrEC-OfTDw10rR7mQvpPoQxhB-&export=download
+
+'">다운로드</button>
         </div>
     </div>
 </body>
