--- a/search.html
+++ b/search.html
@@ -263,6 +263,12 @@
                 imgSrc: 'https://i.postimg.cc/Kj6LBXjk/XL.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
+            {
+                title: '오투 중학 과학 1-2',
+                link: 'https://jungdapi.netlify.app/o2',
+                imgSrc: 'https://i.postimg.cc/KvJNSFP5/XL-1.jpg',
+                description: '클릭하여 답지를 다운로드 하세요.',
+            },
         ];
 
         function handleSearch() {
