--- a/index.html
+++ b/index.html
@@ -457,10 +457,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: '오투 중학 과학 1-2',
+                    link: 'https://jungdapi.netlify.app/o2',
+                    imgSrc: 'https://i.postimg.cc/KvJNSFP5/XL-1.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
