--- a/index.html
+++ b/index.html
@@ -463,10 +463,10 @@
                     description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
-                    title: '2024 물리 답지',
-                    link: 'https://www.6.com',
-                    imgSrc: '/answer3.jpg',
-                    description: '2024 물리 정답',
+                    title: 'READING BITE PREP (리딩바이트) 중학 수학 1',
+                    link: 'https://jungdapi.netlify.app/bite',
+                    imgSrc: 'https://i.postimg.cc/65XWJxWT/XL-2.jpg',
+                    description: '클릭하여 답지를 다운로드 하세요.',
                 },
                  {
                     title: '2024 물리 답지',
