--- a/bite.html
+++ b/bite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>READING BITE PREP (리딩바이트) 중학 수학 1</title>
+    <title>READING BITE PREP (리딩바이트) 중학 영어어 1</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -166,8 +166,8 @@
     <div class="book-section">
         <h2>책 소개</h2>
         <div class="book-info">
-            <img src="https://i.postimg.cc/65XWJxWT/XL-2.jpg" alt="READING BITE PREP 중학 수학 1" class="book-cover">
-            <h3 class="book-title">READING BITE PREP 중학 수학 1</h3>
+            <img src="https://i.postimg.cc/65XWJxWT/XL-2.jpg" alt="READING BITE PREP 중학 영어 1" class="book-cover">
+            <h3 class="book-title">READING BITE PREP 중학 영어 1</h3>
             <p class="book-description">
                 중학교에 들어가기 전에 효과적으로 독해 실력을 강화하는 중학 독해서!
             </p>
