--- a/search.html
+++ b/search.html
@@ -270,7 +270,7 @@
                 description: '클릭하여 답지를 다운로드 하세요.',
             },
             {
-                title: 'READING BITE PREP (리딩바이트) 중학 수학 1',
+                title: 'READING BITE PREP (리딩바이트) 중학 영어 1',
                 link: 'https://jungdapi.netlify.app/bite',
                 imgSrc: 'https://i.postimg.cc/65XWJxWT/XL-2.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
