--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>검색</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display/swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Inter', sans-serif;
@@ -65,31 +65,40 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            flex-wrap: wrap;
         }
         .results-header h2 {
             color: #333;
             margin-bottom: 20px;
+            flex: 1 1 100%;
         }
-        .sort-options {
+        .filter-container {
             display: flex;
             gap: 10px;
+            overflow-x: auto;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+            margin-bottom: 20px;
         }
-        .sort-options button {
+        .filter-container::-webkit-scrollbar {
+            display: none;
+        }
+        .filter-container select {
             padding: 10px 15px;
             border-radius: 5px;
             border: 1px solid #ccc;
-            background-color: #f8f8f8;
+            background-color: #fff;
             color: #333;
             cursor: pointer;
-            transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
+            transition: border-color 0.3s ease, color 0.3s ease;
+            font-family: 'Inter', sans-serif;
+            font-size: 0.9em;
+            flex-shrink: 0;
+            min-width: 120px;
+            box-sizing: border-box;
         }
-        .sort-options button:hover {
-            background-color: #eee;
+        .filter-container select:hover {
             border-color: #aaa;
-        }
-        .sort-options button.active {
-            background-color: #ddd;
-            border-color: #888;
         }
         .results-container {
             display: grid;
@@ -107,6 +116,9 @@
             cursor: pointer;
             box-sizing: border-box;
             text-align: left;
+        }
+        .answer-card:hover {
+            background-color: #eee;
         }
         .answer-card img {
             width: 100px;
@@ -165,19 +177,34 @@
                 align-items: flex-start;
                 gap: 10px;
             }
-            .sort-options {
-                justify-content: flex-start;
+            .filter-container {
+                flex-direction: row;
+                align-items: flex-start;
+                margin-left: 0;
+                overflow-x: auto;
+                display: flex;
+            }
+            .filter-container select {
+                margin-bottom: 0;
+                margin-right: 10px;
+                flex-shrink: 0;
+                min-width: 120px;
             }
             .answer-card {
-                flex-direction: column;
-                text-align: center;
+                flex-direction: row;
+                align-items: center;
+                text-align: left;
             }
             .answer-card img {
-                margin-right: 0;
-                margin-bottom: 10px;
-                width: 100%;
-                height: auto;
-                max-height: 200px;
+                margin-right: 15px;
+                margin-bottom: 0;
+                width: 100px;
+                height: 130px;
+                max-height: none;
+            }
+            .answer-text {
+                flex: 1;
+                text-align: left;
             }
         }
     </style>
@@ -190,100 +217,152 @@
                 link: 'https://jungdapi.netlify.app/uhyeong',
                 imgSrc: 'https://i.postimg.cc/3NcNq4y7/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '체크체크 중학 수학 1-1',
                 link: 'https://jungdapi.netlify.app/ch1',
                 imgSrc: 'https://i.postimg.cc/Vk1P8sjc/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '개념원리 RPM 중학 수학 1-1',
                 link: 'https://jungdapi.netlify.app/rpm',
                 imgSrc: 'https://i.postimg.cc/zfYPHXtH/RMP.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '체크체크 중학 수학 1-2',
                 link: 'https://jungdapi.netlify.app/ch2',
                 imgSrc: 'https://i.postimg.cc/3Nj26YjV/1-2.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '2',
             },
             {
                 title: 'I Love Grammar 1권',
                 link: 'https://jungdapi.netlify.app/ilg',
                 imgSrc: 'https://i.postimg.cc/T25Sv5Q1/ilove.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '1316 GRAMMAR Level 1',
                 link: 'https://jungdapi.netlify.app/1316',
                 imgSrc: 'https://i.postimg.cc/5NcKz42V/1316.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '100발 100중 중학 영어 1-1',
                 link: 'https://jungdapi.netlify.app/100bal',
                 imgSrc: 'https://i.postimg.cc/LXWQBvQ0/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '수력충전 중학 수학 1-1',
                 link: 'https://jungdapi.netlify.app/suryeok',
                 imgSrc: 'https://i.postimg.cc/zD4x87tg/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '쏀 중학 수학 1-1',
                 link: 'https://jungdapi.netlify.app/ssen',
                 imgSrc: 'https://i.postimg.cc/wv5kFPT5/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '개념원리 중학 수학 1-1',
                 link: 'https://jungdapi.netlify.app/wonri',
                 imgSrc: 'https://i.postimg.cc/8P8wVdNc/image.png',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '한끝 중학 국어 통합편 1',
                 link: 'https://jungdapi.netlify.app/han',
                 imgSrc: 'https://i.postimg.cc/c1mc73Yb/image.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '바빠 고등 수학으로 연결되는 중학도형 총정리',
                 link: 'https://jungdapi.netlify.app/babba',
                 imgSrc: 'https://i.postimg.cc/TwSWv8r7/XL-1.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: 'Junior Reading Expert level2',
                 link: 'https://jungdapi.netlify.app/ex2',
                 imgSrc: 'https://i.postimg.cc/Kj6LBXjk/XL.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '고등',
+                grade: '1',
+                semester: '1',
             },
             {
                 title: '오투 중학 과학 1-2',
                 link: 'https://jungdapi.netlify.app/o2',
                 imgSrc: 'https://i.postimg.cc/KvJNSFP5/XL-1.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '2',
             },
             {
                 title: 'READING BITE PREP (리딩바이트) 중학 영어 1',
                 link: 'https://jungdapi.netlify.app/bite',
                 imgSrc: 'https://i.postimg.cc/65XWJxWT/XL-2.jpg',
                 description: '클릭하여 답지를 다운로드 하세요.',
+                school: '중학',
+                grade: '1',
+                semester: '1',
             },
         ];
 
         function handleSearch() {
             const searchBox = document.querySelector('.search-box');
+            const schoolFilter = document.getElementById('school-filter').value;
+            const gradeFilter = document.getElementById('grade-filter').value;
+            const semesterFilter = document.getElementById('semester-filter').value;
             const searchTerm = searchBox.value.toLowerCase();
 
-            const results = allAnswers.filter(answer =>
-                answer.title.toLowerCase().includes(searchTerm) || answer.description.toLowerCase().includes(searchTerm)
-            );
+            const results = allAnswers.filter(answer => {
+                const searchMatch = answer.title.toLowerCase().includes(searchTerm) || answer.description.toLowerCase().includes(searchTerm);
+                const schoolMatch = schoolFilter === '' || answer.school === schoolFilter;
+                const gradeMatch = gradeFilter === '' || answer.grade === gradeFilter;
+                const semesterMatch = semesterFilter === '' || answer.semester === semesterFilter;
+                return searchMatch && schoolMatch && gradeMatch && semesterMatch;
+            });
 
             displaySearchResults(results, 1);
         }
@@ -335,24 +414,11 @@
             }
         }
 
-        function sortByTitle() {
-            allAnswers.sort((a, b) => a.title.localeCompare(b.title));
-            displaySearchResults(allAnswers, 1);
-            document.querySelectorAll('.sort-options button').forEach(button => button.classList.remove('active'));
-            document.getElementById('sort-title').classList.add('active');
-        }
-
-        function sortByDate() {
-            allAnswers.sort((a, b) => 0.5 - Math.random());
-            displaySearchResults(allAnswers, 1);
-            document.querySelectorAll('.sort-options button').forEach(button => button.classList.remove('active'));
-            document.getElementById('sort-date').classList.add('active');
-        }
-
         document.addEventListener('DOMContentLoaded', () => {
             const searchBox = document.querySelector('.search-box');
-            const sortTitleButton = document.getElementById('sort-title');
-            const sortDateButton = document.getElementById('sort-date');
+            const schoolFilter = document.getElementById('school-filter');
+            const gradeFilter = document.getElementById('grade-filter');
+            const semesterFilter = document.getElementById('semester-filter');
 
             document.querySelector('.search-button').addEventListener('click', handleSearch);
             document.querySelector('.search-box').addEventListener('keydown', (event) => {
@@ -360,8 +426,10 @@
                     handleSearch();
                 }
             });
-            sortTitleButton.addEventListener('click', sortByTitle);
-            sortDateButton.addEventListener('click', sortByDate);
+
+            schoolFilter.addEventListener('change', handleSearch);
+            gradeFilter.addEventListener('change', handleSearch);
+            semesterFilter.addEventListener('change', handleSearch);
 
             const initialSearchTerm = localStorage.getItem('searchTerm');
             if (initialSearchTerm) {
@@ -385,9 +453,24 @@
 
     <div class="results-header">
         <h2>검색 결과</h2>
-        <div class="sort-options">
-            <button id="sort-title">제목순</button>
-            <button id="sort-date">날짜순</button>
+        <div class="filter-container">
+            <select id="school-filter">
+                <option value="">전체 학교</option>
+                <option value="초등">초등</option>
+                <option value="중학">중학</option>
+                <option value="고등">고등</option>
+            </select>
+            <select id="grade-filter">
+                <option value="">전체 학년</option>
+                <option value="1">1학년</option>
+                <option value="2">2학년</option>
+                <option value="3">3학년</option>
+            </select>
+            <select id="semester-filter">
+                <option value="">전체 학기</option>
+                <option value="1">1학기</option>
+                <option value="2">2학기</option>
+            </select>
         </div>
     </div>
 
