--- a/search.html
+++ b/search.html
@@ -457,7 +457,7 @@
             <select id="school-filter">
                 <option value="">전체 학교</option>
                 <option value="초등">초등</option>
-                <option value="중학">중학</option>
+                <option value="중등">중등</option>
                 <option value="고등">고등</option>
             </select>
             <select id="grade-filter">
