--- a/index.html
+++ b/index.html
@@ -330,12 +330,32 @@
             .answer-text {
                 text-align: center;
             }
+             .carousel-control {
+                top: 140%;
+                transform: translateY(-140%);
+            }
+             .recent-answers {
+                grid-template-columns: 1fr; /* 모바일에서 1열로 변경 */
+            }
         }
+        
+        @media (min-width: 769px) {
+            .carousel-control {
+                top: 50%;
+                transform: translateY(-50%);
+            }
+             .recent-answers {
+                grid-template-columns: repeat(2, 1fr); /* PC에서 2열로 설정 */
+                max-width: 1200px; /* 최대 너비 설정 */
+                margin: 0 auto; /* 가운데 정렬 */
+            }
+        }
+
    .request-button {
             margin-top: 20px; /* 필요에 따라 조정 */
         }
-      
-    /* Sticky Header Styles */
+
+           /* Sticky Header Styles */
         .sticky-header {
             position: fixed;
             top: 0;
@@ -380,7 +400,7 @@
     </style>
     <script>
         let currentPage = 1;
-        const recordsPerPage = 3;
+        const recordsPerPage = 6; // 한 페이지에 표시되는 답지 수
 
         function handleSearch() {
             window.location.href = 'https://jungdapi.netlify.app/search';
@@ -578,8 +598,12 @@
             const searchBox = document.querySelector('.search-box');
             const carouselItems = document.querySelectorAll('.carousel-item');
             const sectionTitles = document.querySelectorAll('.section h2');
-            const welcomeTitle = document.querySelector('h1');
+            const welcomeTitle =document.querySelector('h1');
             const header = document.querySelector('.sticky-header');
+            const carouselContainer = document.querySelector('.carousel-container');
+            const prevButton = document.querySelector('.carousel-control.prev');
+            const nextButton = document.querySelector('.carousel-control.next');
+
 
             searchBox.addEventListener('click', handleSearch);
             document.querySelector('.search-button').addEventListener('click', handleSearch);
@@ -608,7 +632,7 @@
 
             let isScrolled = false;
 
-window.addEventListener('scroll', () => {
+            window.addEventListener('scroll', () => {
                 if (window.scrollY > 50) {
                     if (!isScrolled) {
                         header.classList.add('scrolled');
@@ -621,6 +645,22 @@ window.addEventListener('scroll', () => {
                     }
                 }
             });
+
+           // Calculate and set carousel button position on load and resize
+            function setCarouselButtonPosition() {
+                const containerRect = carouselContainer.getBoundingClientRect();
+                const containerHeight = containerRect.height;
+                const buttonTop = containerRect.top + containerHeight / 2;
+
+                prevButton.style.top = `${buttonTop}px`;
+                prevButton.style.transform = 'translateY(-50%)';
+                nextButton.style.top = `${buttonTop}px`;
+                nextButton.style.transform = 'translateY(-50%)';
+            }
+
+            // Call the function on load and resize
+            window.addEventListener('load', setCarouselButtonPosition);
+            window.addEventListener('resize', setCarouselButtonPosition);
         });
     </script>
 </head>
