--- a/search.html
+++ b/search.html
@@ -183,16 +183,15 @@
                 margin-left: 0;
                 overflow-x: auto;
                 display: flex;
-                gap: 5px; /* 모바일 필터 간 간격 조정 */
             }
             .filter-container select {
                 margin-bottom: 0;
-                margin-right: 5px; /* 모바일 필터 간 간격 조정 */
+                margin-right: 10px;
                 flex-shrink: 0;
                 min-width: 100px;
                 height: 30px;
-                font-size: 0.7em; /* 모바일 필터 폰트 크기 조정 */
-                padding: 5px 10px; /* 모바일 필터 패딩 조정 */
+                font-size: 0.8em;
+                padding: 8px 12px;
             }
             .answer-card {
                 flex-direction: row;
@@ -485,4 +484,3 @@
     </div>
 </body>
 </html>
-
